--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,12 +6,9 @@
     <h1>SimpleCRM</h1>
     <span class="menu-spacer"></span>
     <div>
-      <a mat-button [routerLink]="'/accounts'"> Accounts </a>
-      <a mat-button [routerLink]="'/create-account'"> Create Account </a>
-      <a mat-button [routerLink]="'/contacts'"> Contacts </a>
-      <a mat-button [routerLink]="'/create-contact'"> Create Contact </a>
-      <a mat-button [routerLink]="'/activities'"> Activities </a>
-      <a mat-button [routerLink]="'/create-activity'"> Create Activity </a>
+      <a mat-button (click)="addComponentToTabs('component 1 label','one')"> Component 1 </a>
+      <a mat-button (click)="addComponentToTabs('component 2 label','two')">  Component 2 </a>
+      <a mat-button (click)="addComponentToTabs('component 3 label','three')"> Component 3</a>
 
     </div>
   </mat-toolbar-row>
